--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/URL_Monitor/v16/.suo
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
